--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-  <a class="navbar-brand" href="/">
+  <a class="navbar-brand navbar-space" href="/">
     <img src="/img/guia.png" alt="Logo" height="40" />
   </a>
 </nav>
